drop menu in nav

--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,28 @@
   background: var(--color-background-1);
 }
 
+
+/* NAVIGATION BAR */
 .app-nav {
   background: var(--color-white);
   background: linear-gradient(270deg, var(--color-gray) 0%, var(--color-white) 10%, var(--color-white) 90%, var(--color-gray) 100%);
   border-top: 8px solid var(--color-header-detail-1);
   border-bottom: 1.3px solid var(--color-gray);
+}
+
+.nav-root-links {
+  cursor: pointer;
+  padding-left: 1.5vmin;
+}
+
+.nav-menu-style {
+  position: absolute;
+  top: 98px;
+  display: grid;
+  grid-gap: 1.5vmin;
+  padding: 1.5vmin;
+  background: var(--color-background-3);
+  border: 1px solid var(--color-gray);
 }
 
 .app-aside {
