--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,6 @@
   background: var(--color-background-1);
 }
 
-
-/* NAVIGATION BAR */
 .app-nav {
   background: var(--color-white);
   background: linear-gradient(270deg, var(--color-gray) 0%, var(--color-white) 10%, var(--color-white) 90%, var(--color-gray) 100%);
@@ -59,17 +57,10 @@
 }
 
 .nav-root-links {
-  cursor: pointer;
-  padding-left: 1.5vmin;
   color: var(--font-color-1);
 }
 
 .nav-menu-style {
-  position: absolute;
-  top: 98px;
-  display: grid;
-  grid-gap: 1.5vmin;
-  padding: 1.5vmin;
   background: var(--color-background-3);
   border: 1px solid var(--color-gray);
 }
@@ -108,6 +99,15 @@ a {
 
 .title-line {
   border-bottom: 1.5px solid var(--color-gray);
+}
+
+.no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
 }
 
 /* LIST */
@@ -180,6 +180,19 @@ a {
   font-size: .9em;
   align-items: center;
   flex-wrap: nowrap;
+}
+
+.nav-root-links {
+  cursor: pointer;
+  padding-left: 1.5vmin;
+}
+
+.nav-menu-style {
+  position: absolute;
+  top: 95px;
+  display: grid;
+  grid-gap: 1.5vmin;
+  padding: 1.5vmin;
 }
 
 /* ASIDE + MAIN */
