--- a/src/App.css
+++ b/src/App.css
@@ -56,15 +56,6 @@
   border-bottom: 1.3px solid var(--color-gray);
 }
 
-.nav-root-buttons {
-  margin: 0px;
-  border: none;
-  background: none;
-  font-family: 'Raleway', sans-serif;
-  font-size: 1em;
-  color: var(--font-color-1);
-}
-
 .nav-menu-style {
   background: var(--color-background-3);
   border: 1px solid var(--color-gray);
@@ -128,6 +119,16 @@ a {
   color: var(--font-color-1);
   background-color: var(--color-white);
   border: 1.5px solid var(--color-gray);
+}
+
+.nav-root-buttons {
+  padding: 1px;
+  margin: 0px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1em;
+  background: none;
+  border: none;
+  color: var(--font-color-1);
 }
 
 /* TITLE */
@@ -204,7 +205,7 @@ a {
 .app-aside {
   border-radius: 2vmin 2vmin 0vmin 0vmin;
   padding: 2vw;
-  margin-top: 100px;
+  margin-top: 102px;
 }
 
 main section {
@@ -301,7 +302,7 @@ main section {
 /*--------------------------------------QUIERIES(RESPONSIVITY)--------------------------------------*/
 @media(min-width: 768px) {
   .app-main {
-    margin-top: 100px;
+    margin-top: 102px;
   }
   .main-section-style {
     border-radius: 25px;
