--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,7 @@ a {
 }
 
 .nav-root-buttons {
+  cursor: pointer;
   padding: 1px;
   margin: 0px;
   font-family: 'Raleway', sans-serif;
@@ -188,8 +189,7 @@ a {
   flex-wrap: nowrap;
 }
 
-.nav-root-links {
-  cursor: pointer;
+.nav-root-buttons {
   padding-left: 1.5vmin;
 }
 
