--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,9 @@
 }
 
 .nav-menu-style {
-  background: var(--color-background-3);
-  border: 1px solid var(--color-gray);
+  background: var(--color-white);
+  border: 1.3px solid var(--color-gray);
+  border-top: hidden;
 }
 
 .app-aside {
@@ -134,7 +135,7 @@ a {
 #website-title {
   color: #ffffff;
   font-family: 'Orbitron', sans-serif;
-  font-size: .9em;
+  font-size: .85em;
   letter-spacing: .1em;
   width: 12em;
   cursor: default;
@@ -165,7 +166,7 @@ a {
 
 /* --------------------------------------LAYOUT-------------------------------------- */
 
-/* HEADER + NAV */
+/* HEADER */
 .app-header {
   position: fixed;
   width: 100%;
@@ -180,6 +181,7 @@ a {
   font-size: .9em;
 }
 
+/* NAVIGATION */
 .app-nav {
   padding: 8px 0px;
   font-size: .9em;
@@ -188,14 +190,15 @@ a {
 }
 
 .nav-root-buttons {
-  padding-left: 1.5vmin;
+  padding: 3px 5px;
 }
 
 .nav-menu-style {
   position: absolute;
-  top: 95px;
+  top: 100px;
   display: grid;
   grid-gap: 1.5vmin;
+  white-space: nowrap;
   padding: 1.5vmin;
 }
 
@@ -203,7 +206,7 @@ a {
 .app-aside {
   border-radius: 2vmin 2vmin 0vmin 0vmin;
   padding: 2vw;
-  margin-top: 102px;
+  margin-top: 105px;
 }
 
 main section {
@@ -306,7 +309,6 @@ main section {
     background-color: var(--button-dark-detail);
     color: var(--font-color-3);
   }
-  
   .link-desat:hover {
     transition: all 100ms ease;
     color: var(--font-color-2);
@@ -323,13 +325,13 @@ main section {
 /*--------------------------------------QUIERIES(RESPONSIVITY)--------------------------------------*/
 @media(min-width: 768px) {
   .app-main {
-    margin-top: 102px;
+    margin-top: 105px;
   }
   .main-section-style {
-    border-radius: 25px;
+    border-radius: 13px;
   }
   .app-aside {
-    border-radius: 25px;
+    border-radius: 13px;
     border: 0px;
   }
   .aside-main {
