--- a/src/App.css
+++ b/src/App.css
@@ -208,20 +208,20 @@ a {
 
 .nav-arrow {
   position: relative;
-  top: 4px;
+  top: 3px;
   color: var(--font-color-1);
 }
 .nav-arrow.menu-close {
   transform: rotate(360deg);
-  transition: transform 200ms ease-out;
+  transition: transform 300ms ease-in-out;
 }
 .nav-arrow.menu-open {
   transform: rotate(0deg);
-  transition: transform 200ms ease-out;
+  transition: transform 300ms ease-in-out;
 }
 
 .menu-open > div {
-  animation: dropdown 200ms ease-out;
+  animation: dropdown 300ms linear;
   top: 100px;
 }
 @keyframes dropdown {
@@ -402,42 +402,39 @@ main section {
              box-shadow: 0px 0px 3px .1px var(--color-shadow);
   }
   /* Carousel */
-  .carPos0 {
-    --carPos: 0;
-    background-color: var(--color-gray);
-  }
-  .carPos1 {
-    --carPos: 1;
-    background-color: var(--color-gray);
-  }
-  .carPos2 {
-    --carPos: 2;
-    background-color: var(--color-gray);
-  }
   .carousel-container {
-    width: 100%;
+    --wide: 100%;
     overflow: hidden;
   }
   .projects-carousel {
     position: relative;
-    right: calc(var(--carPos) * 100%);
     transition: right 400ms ease-in;
-    width: calc(3 * 100%);
+    width: calc(3 * var(--wide));
     display: flex;
     justify-content: space-evenly;
   }
   .carousel-item {
-    width: 100%;
+    width: var(--wide);
     padding: 3vmin;
     border-radius: 50px;
+    background: var(--color-background-3);
+    border: 1.3px solid var(--color-gray);
+  }
+  .carPos0 {
+    right: calc(0 * var(--wide));
+    background-color: var(--color-gray);
+  }
+  .carPos1 {
+    right: calc(1 * var(--wide));
+    background-color: var(--color-gray);
+  }
+  .carPos2 {
+    right: calc(2 * var(--wide));
+    background-color: var(--color-gray);
   }
   .carButs button {
     width: calc(30% / 3);
     margin: 15px 5px;
-  }
-  .carousel-item {
-    background: var(--color-background-3);
-    border: 1.3px solid var(--color-gray);
   }
 }
 
