prevent infinte re-render

--- a/src/App.css
+++ b/src/App.css
@@ -244,6 +244,10 @@ main section {
   padding: 0vw 2vw;
 }
 
+.carousel-item {
+  padding: 3vmin;
+}
+
 .main-section-style {
   padding-top: 8px;
   margin-bottom: 8px;
@@ -415,7 +419,6 @@ main section {
   }
   .carousel-item {
     width: var(--wide);
-    padding: 3vmin;
     border-radius: 50px;
     background: var(--color-background-3);
     border: 1.3px solid var(--color-gray);
