--- a/src/App.css
+++ b/src/App.css
@@ -405,6 +405,41 @@ main section {
      -webkit-box-shadow: 0px 0px 3px .1px var(--color-shadow);
              box-shadow: 0px 0px 3px .1px var(--color-shadow);
   }
+  /* Carousel */
+  .carousel-container {
+    --wide: 100%;
+    overflow: hidden;
+  }
+  .projects-carousel {
+    position: relative;
+    transition: right 400ms ease-in;
+    width: calc(3 * var(--wide));
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .carousel-item {
+    width: var(--wide);
+    padding: 3vmin;
+    border-radius: 50px;
+    background: var(--color-background-3);
+    border: 1.3px solid var(--color-gray);
+  }
+  .carPos0 {
+    right: calc(0 * var(--wide));
+    background-color: var(--color-gray);
+  }
+  .carPos1 {
+    right: calc(1 * var(--wide));
+    background-color: var(--color-gray);
+  }
+  .carPos2 {
+    right: calc(2 * var(--wide));
+    background-color: var(--color-gray);
+  }
+  .carButs button {
+    width: calc(30% / 3);
+    margin: 15px 5px;
+  }
 }
 
 @media(min-width: 1251px) {
