--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,9 @@ a {
 
 /*                       LAYOUT                       */
 * {
-  --below-header: 112px;
+  --header-height: 60px;
+  --nav-height: 20px;
+  --below-header: calc(var(--header-height) + var(--nav-height) + 34px);
 }
 
 
@@ -182,6 +184,7 @@ a {
   align-items: center;
   grid-template-columns: .4fr 10fr 2fr;
   font-size: .9em;
+  height: var(--header-height);
 }
 
 /* NAVIGATION */
@@ -190,6 +193,7 @@ a {
   font-size: .9em;
   align-items: center;
   flex-wrap: nowrap;
+  height: var(--nav-height);
 }
 
 .nav-buttons {
