--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
 }
 
 .main-section-style-content {
-  padding: 1vmin 2vmin;
+  padding: 2vmin;
   border-radius: 12px;
   background: var(--color-white);
   border: 1.2px solid var(--color-gray);
