--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@
   --font-color-2: #999999;
   --font-color-3: #808080;
   
-  --color-shadow: #4a4a4a;
+  
+  --color-shadow: #808080;
   --color-header-detail-1: #103b70;
   --color-photo-detail-1: #ffffff80;
   --button-dark-detail: #000000;
@@ -384,6 +385,11 @@ main section {
   }
   .top-link-style:hover {
     background: var(--color-gray);
+  }
+  .hover-effect:hover {
+    -moz-box-box-shadow: 0px 0px 3px .1px var(--color-shadow);
+     -webkit-box-shadow: 0px 0px 3px .1px var(--color-shadow);
+             box-shadow: 0px 0px 1px 1px var(--color-shadow);
   }
 }
 
