--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,30 @@ a {
 }
 
 /* PROFILE IMAGE */
+
+/* .profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+}
+.profile-border {
+  width: 100%;
+  height: 100%;
+  background: conic-gradient( #4596b8, #e49e36, #055b85);
+  border-radius: 100%;
+  /* animation: spinner2 3s linear infinite;
+} */
+
+@keyframes spinner2 {
+  from {
+    transform: rotate(-45deg);
+  }
+  to {
+    transform: rotate(315deg);
+  }
+}
+
 .profile-photo {
   border-radius: 50%;
   position: relative;
@@ -362,36 +386,6 @@ main section {
   background: var(--color-background-3);
   border: 1.3px solid var(--button-dark-detail);
   color: var(--font-color-1);
-}
-
-/*                       LOADERS                       */
-
-.loading-container {
-  height: 10vmin;
-  width: 10vmin;
-  border-radius: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: black;
-}
-.loading-container div {
-  z-index: -1;
-  position: absolute;
-  height: 12vmin;
-  width: 12vmin;
-  background: conic-gradient( #4596b8, #e49e36, #055b85);
-  border-radius: 100%;
-  animation: spinner2 3s linear infinite;
-}
-
-@keyframes spinner2 {
-  from {
-    transform: rotate(-45deg);
-  }
-  to {
-    transform: rotate(315deg);
-  }
 }
 
 /*                       QUIERIES(INTERACTIVITY)                       */
