--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
   
   --color-shadow: #9e9e9e;
   --color-header-detail-1: #80b9ff;
-  --color-photo-detail-1: #73739b80;
   --button-dark-detail: #000000;
 }
 
@@ -34,7 +33,6 @@
   
   --color-shadow: #666666;
   --color-header-detail-1: #103b70;
-  --color-photo-detail-1: #ffffff80;
   --button-dark-detail: #000000;
 }
 
@@ -184,42 +182,55 @@ a {
 
 /* PROFILE IMAGE */
 
-/* .profile-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-}
 .profile-border {
-  width: 100%;
-  height: 100%;
-  background: conic-gradient( #4596b8, #e49e36, #055b85);
+  position: relative;
+  width: 190px;
+  margin-top: 12px;
+  margin-bottom: 12px;
   border-radius: 100%;
-  /* animation: spinner2 3s linear infinite;
-} */
+  background: conic-gradient(#4596b8, #055b85, #e49e36);
+  background-size: 1000px;
+  animation: colorShift 8s linear infinite;
+}
 
-@keyframes spinner2 {
+.profile-photo {
+  border-radius: 100%;
+  position: relative;
+  width: 180px;
+  padding: 1px;
+  left: 50%;
+  transform: translateX(-50%);
+  -moz-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
+  -webkit-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
+  box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
+}
+
+@keyframes colorShift {
+  0% {
+    background-position: 100% 100%;
+  }
+  20% {
+    background-position: 0% 100%;
+  }
+  50% {
+    background-position: 0% 0%;
+  }
+  80% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+
+@keyframes spinner {
   from {
     transform: rotate(-45deg);
   }
   to {
-    transform: rotate(315deg);
-  }
-}
+    transform: rotate(135deg);
 
-.profile-photo {
-  border-radius: 50%;
-  position: relative;
-  width: 180px;
-  padding: 1px;
-  margin-top: 8px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: var(--color-photo-detail-1);
-  border: 1px solid var(--color-photo-detail-1);
-  -moz-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
-  -webkit-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
-  box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
+  }
 }
 
 /*                       LAYOUT                       */
@@ -448,13 +459,13 @@ main section {
   .exp-list {
     width: 40vw;
   }
-  .profile-photo {
-    width: 23vw;
+  .profile-border {
+    width: 24vw;
     margin-top: 0px;
     margin-bottom: 25px;
   }
   .profile-photo {
-    margin-left: 0px;
+    width: 23vw;
   }
   .border-left {
     margin-top: 10px;
@@ -503,6 +514,9 @@ main section {
 }
 
 @media(min-width: 1251px) {
+  .profile-border {
+    width: 310px;
+  }
   .profile-photo {
     width: 300px;
   }
